--- a/templates/calculator_app/base.html
+++ b/templates/calculator_app/base.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block head %}
     {% endblock %}
 </head>
 <body>
+    <center>
+        {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{message.tags}}" role="alert">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
+    </center>
+    
 </body>
 </html>
