--- a/templates/calculator_app/index.html
+++ b/templates/calculator_app/index.html
@@ -5,32 +5,36 @@
     {% endblock %}
 
     {% block content %}
-        <h1>Calculator App</h1>
-        <div class="col">
-            <div class="row">
-                <label>Enter First Number :</label>
-                <input type="text" name="number1">
-                <br>
-                <br>
-                <label>Enter Second Number :</label>
-                <input type="text" name="number2">
-                <br>
-                <br>
-                <label>Choose Operator :</label>
-                <select name="operator">
-                    <option value="+">+</option>
-                    <option value="-">-</option>
-                    <option value="*">*</option>
-                    <option value="/">/</option>
-                    <option value="%">%</option>
-                </select>
-                <br>
-                <br>
-                <input type="button" value="Calculate">
-                <br>
-                <br>
-                <label>Result :</label>
-                <input type="text" name="result" value="">
+        <form method="post">
+            {% csrf_token %}
+            <h1>Calculator App</h1>
+            <div class="col">
+                <div class="row">
+                    <label>Enter First Number :</label>
+                    <input type="text" name="number1">
+                    <br>
+                    <br>
+                    <label>Enter Second Number :</label>
+                    <input type="text" name="number2">
+                    <br>
+                    <br>
+                    <label>Choose Operator :</label>
+                    <select name="operator">
+                        <option value="---select operation---">---select operation---</option>
+                        <option value="+">+</option>
+                        <option value="-">-</option>
+                        <option value="*">*</option>
+                        <option value="/">/</option>
+                        <option value="%">%</option>
+                    </select>
+                    <br>
+                    <br>
+                    <input type="submit" value="Calculate">
+                    <br>
+                    <br>
+                    <label>Result :</label>
+                    <input type="text" name="result" value="{{result}}">
+                </div>
             </div>
-        </div>
+        </form>
     {% endblock %}
